# man-pac

./: .gitignore  CMakeLists.txt  README.md  config.h  game.cpp  game.h  main.cpp
.github/workflows/: static.yml
Enteties/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  player.cpp  player.h
Map/: Map.cpp  Map.h  Packmap.json  Packmap.tsx  untitled.tmx
Menu/: Menu.cpp  Menu.h
Pacman/: NEW.css  index.html  pacman10-hp.12.js
